--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                This challenge helped me enhance my problem-solving abilities, deepen my understanding of algorithms, and improve my coding 
                skills in preparation for technical interviews. The experience also contributed to my ability to efficiently tackle complex 
                programming tasks and think critically under time constraints.</p>
-               <a href="https://leetcode.com/medal/?showImg=0&id=6738592&isLevel=false">Click here</a>
+               <a href="https://leetcode.com/u/5YmXDI78hB/">Click here</a>
           </div>
           
         <!-- </div> -->
