--- a/index.html
+++ b/index.html
@@ -63,6 +63,32 @@
           </div>
         </div>
       </div>
+      <div class="education-section">
+          <h3>Education</h3>
+          <div class="education-grid">
+            <div class="education-item fade-in">
+              <h4><img src="LPU-logo.jpg" alt="LPU Logo" class="skill-logo"> Lovely Professional University</h4>
+              <p>B.Tech in Computer Science and Engineering</p>
+              <p>Semester: VI (Expected Graduation: 2026)</p>
+              <p>Current CGPA: 7.79</p>
+              <p>Location: Phagwara, Punjab, India</p>
+            </div>
+            <div class="education-item fade-in">
+              <h4><img src="TSRJC-logo.png" alt="LPU Logo" class="skill-logo"> Telangana State Residential Junior College</h4>
+              <p>Intermediate with Mathematics</p>
+              <p>2020 - 2022</p>
+              <p>Percentage: 95.5%</p>
+              <p>Location: Metpally, Telangana, India</p>
+            </div>
+            <div class="education-item fade-in">
+              <h4><img src="Khs-logo.jpg" alt="LPU Logo" class="skill-logo"> Kerala High School</h4>
+              <p>Secondary School of Education</p>
+              <p>2019 - 2020</p>
+              <p>Percentage: 100%</p>
+              <p>Location: Korutla, Telangana, India</p>
+            </div>
+          </div>
+        </div>
     </section>
     <section id="skills" class="section">
   <div class="container">
